# snake-tui

./: Cargo.toml  README.md
src/: game.rs  main.rs  tui.rs  util.rs
