[package]
name = "snake-tui"
version = "0.2.0"
edition = "2021"
description = "A cross platform snake game running in the terminal"
license = "MIT"


[dependencies]
crossterm = "0.28.1"
rand = "0.9.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
